zeit.content.cp changes
=======================


0.7 (unreleased)
----------------

0.6 (2009-05-17)
----------------

Neue Funktionen
---------------

- Neue Content Blöcke "Audio" (#5276) und "Video" (#5051) wurden hinzugefügt.

- Automatische Teaserblöcke (Autopilot) können auch Channel referenzieren
  (#5290).

- Automatische Teaserblöcke erstellen korrektes <xi:include>.

- Blöcke in einer Teaserleiste sind alle gleich hoch.

- ``cp_extra`` Blöcke: Wetter, Börse, Meistgelesen, Meistkommentiert

- RSS-Block (für externe Feeds) hinzugefügt (#5273).

- Keine eigene Translationdomain mehr, Übersetzungen via zeit.locales.

- Umsortieren von Blöcken in Teaserleisten.

0.5 (2009-05-08)
----------------

Neue Funktionen
---------------

- Ein neuer Content Block "XML" wurde hinzugefügt (#5277)

- Validierungsregeln: Die unter
  http://zip6.zeit.de:9000/cms/forms/centerpage-validation-rules.py abgelegten
  Regeln werden auf die CenterPage angewandt. Fehler werden rot, Warnungen
  gelb. Gibt es einen fehlerhaften Bereich, kann die CP nicht veröffentlicht
  werden.

- Für die Teaserleiste kann nun das Layout MR (einspaltiger Werbeblock),
  DMR (zweispaltiger Werbeblock) und normal (keine Werbung) ausgewählt werden
  (#5001).


0.4 (2009-04-30)
----------------

Neue Funktionen
~~~~~~~~~~~~~~~

- Wird ein Objekt auf einem Autopilot-Block fallgen gelassen wird der Autopilot
  automatisch ausgeschaltet.

- Landefläche für Teaser in der Aufmacherfläche (#4883): Fallen lassen eines
  Content-Objekts bewirkt das Anlegen eines Teaser-Blocks mit dem Objekt und
  seinen Relateds.

- Beim Bearbeiten von Teasern können nun »freie Teaser« erzeugt werden. (#4788)

- Regeln für Layouts von Teaserlisten (#5033): Der erste Block bekommt das
  Layout mit dem großen Bild, alle anderen das Layout mit dem kleinen Bild.

- Beim Einchecken der Centerpage werden die Metadaten der referenzierten
  Artikel aktualisiert. (#4976)
