@@ -94,6 +94,7 @@ The teaser block can be edited:
 <div class="lightbox-full teaser-list-edit-box">
   <ol id="teaser-list-edit-box-sorter"
       cms:url="http://localhost/++skin++cms/workingcopy/zope.user/island/lead/<GUID>">
+    <li class="action-content-droppable...index=0...
     <li class="edit-bar even"
         cms:uniqueid="http://xml.zeit.de/c1">
       <a class="edit-link"
@@ -108,6 +109,7 @@ The teaser block can be edited:
       </a>
       <div>c1 teaser</div>
     </li>
+    <li class="action-content-droppable...index=1...
     <li class="edit-bar odd"
         cms:uniqueid="http://xml.zeit.de/testcontent">
       <a class="edit-link"
@@ -122,6 +124,7 @@ The teaser block can be edited:
       </a>
       <div></div>
     </li>
+    <li class="action-content-droppable...index=2...
   </ol>
 </div>
 ...
@@ -294,10 +297,12 @@ True
 <div class="lightbox-full teaser-list-edit-box">
   <ol id="teaser-list-edit-box-sorter"
       cms:url="http://localhost/++skin++cms/workingcopy/zope.user/island/lead/<GUID>">
+    <li class="action-content-droppable...
     <li class="edit-bar even" ...
         ...
       <div>Test content teaser title</div>
     </li>
+    <li class="action-content-droppable...
   </ol>
 </div>
 ...
@@ -331,7 +336,6 @@ A teaser block can be set on 'autopilot'. In this mode, it will retrieve teasers
 from another CenterPage for display. To demonstrate this, we first create
 another CenterPage:
 
->>> browser.handleErrors = False
 >>> zeit.content.cp.browser.tests.create_cp(browser, filename='foreign')
 >>> browser.open('contents')
 >>> foreign_url = browser.url
