@@ -147,10 +147,10 @@
   margin-top: 0;
 }
 
-
 .landing-zone.visible {
   border: 1px dashed #00ee5e;
   color: #00ee5e;
+  display: block;
   height: auto;
   margin: 1em 0;
   padding: 1em;
@@ -161,16 +161,33 @@
   margin: 1em 0 0 0;
 }
 
+.lightbox .landing-zone {
+  border: 1px solid #00ee5e;
+  height: 0.5em;
+  padding: 0;
+  margin: 0 1em;
+  visibility: hidden;
+}
+
+.lightbox .landing-zone.visible {
+  margin-top: 1em;
+  height: 1em;
+  padding: 1em;
+}
+
 .landing-zone.droppable-active {
   border-style: solid;
   background-color: #d7ffda;
+  display: block;
   visibility: visible;
 }
 
 .landing-zone.hover-content {
   border-color: #00ee5e;
   outline: 4px solid #00ee5e;
+  display: block;
   visibility: visible;
+  z-index: 1;
 }
 
 .landing-zone.hover-content.visible {
@@ -502,7 +519,8 @@
 .teaser-list-edit-box > ol > li {
   clear: both;
   display: block;
-  padding: 0.4em 0;
+  height: 1.5em;
+  padding: 0.4em 0.5em;
 }
 
 .teaser-list-edit-box > ol > li.even {
