@@ -7,15 +7,18 @@ import zeit.cms.browser.view
 
 class Form(object):
 
-    def __init__(self, var_name, json=False):
+    def __init__(self, var_name, json=False, default=None):
         self.var_name = var_name
         self.json = json
+        self.default = default
 
     def __get__(self, instance, class_):
         if instance is None:
             return self
 
-        value = instance.request.form[self.var_name]
+        value = instance.request.form.get(self.var_name, self.default)
+        if value is self.default:
+            return value
         if self.json:
             value = cjson.decode(value)
         return value
